# smhi

./: README.md  get_metobs.py  get_metobs_historic.py  get_metobs_recent.py  pyproject.toml  smhi_metobs.duckdb  staging.py  stg_parameters.py  stg_stations.py  stg_test.py  temp.py
data/: metobs_data.csv  stg_parameters.csv  stg_stations.csv
